2004-07-30  Michal Ludvig  <mludvig@suse.cz>

	* gas/i386/padlock.s, gas/i386/padlock.d: New tests for
	VIA PadLock instructions.

2004-07-29  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* gas/sh/basic.exp: Don't do sh2a test for sh5.
	* gas/sh/sh2a.d: Match elf32-sh* format too.

2004-07-29  Alexandre Oliva  <aoliva@redhat.com>

	2003-12-30  DJ Delorie  <dj@redhat.com>
	* gas/sh/sh2a.s: New.
	* gas/sh/sh2a.d: New.
	* gas/sh/basic.exp: Add it.

2004-07-27  Tomer Levi  <Tomer.Levi@nsc.com>

	* gas/all/gas.exp (do_930509a): Disable test for crx.

2004-07-22  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/x86-64-inval.l: Remove the leading `+'.

2004-07-22  Nick Clifton  <nickc@redhat.com>

	PR/280
	* gas/h8300/ffxx1-coff.d: Remove duplicated raw insn values.
	* gas/h8300/ffxx1-elf.d: Likewise.
	* gas/h8300/h8sx_disp2.d: Likewise.
	* gas/h8300/h8sx_mov_imm.d: Likewise.
	* gas/h8300/h8sx_rtsl.d: Likewise.	
	* gas/h8300/ffxx1-coff.s: Remove inappropriate insn width specifier.
	* gas/h8300/ffxx1-elf.s: Likewise.

2004-07-21  Jan Beulich <jbeulich@novell.com>

	* gas/i386/x86-64-addr32.[ds]: New test for x86-64 32-bit
	addressing in 64-bit mode.
	* gas/i386/x86-64-rip.[ds]: New test for x86-64 rip-relative
	addressing.
	* gas/i386/i386.exp: Run the two new tests.

	* gas/cfi/cfi-x86_64.d: Adjust expectation for leave to	not have a
	rex prefix.
	* gas/i386/x86-64-inval.[ls]: Add a bunch of instructions illegal
	in 64-bit mode.
	
2004-07-20  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/elf-rel19.d: Pass -march=mips1 to gas as the test
	expects load delay slots.

2004-07-20  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/vr5400.d: Update for a correct disassembly of
	"racm.ob".

2004-07-20  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/mips32.s: Adjust for the unified "break" syntax.  Add
	another "break" case.  Update the comment accordingly.
	* gas/mips/set-arch.s: Likewise.
	* gas/mips/mips32.d: Adjust for the new output.