@@ -153,9 +153,6 @@ gas_m68hc11_error "-m68hc12" "movb 2,x,bar,pc\nbar=300\n" \
 gas_m68hc11_error "-m68hc12" "movb bar,pc,2,x\nbar=300\n" \
     "Offset out of 5-bit range for movw/movb insn: 300"
 
-setup_xfail m6811-*-*
-setup_xfail m6812-*-*
-
 # ------------------
 # Specific commands
 gas_m68hc11_warning "" ".mode \"bar\"\n" "Invalid mode: .bar."
